fixed issue where the 'board' were overflowing

--- a/src/components/board/_index.scss
+++ b/src/components/board/_index.scss
@@ -7,16 +7,28 @@
 	&__tile {
 		list-style: none;
 		aspect-ratio: 1 / 1;
+	}
 
-		button {
-			border-radius: 0.5rem;
-			box-shadow: 0 0 10px hsl(0, 0%, 10%);
-			width: 100%;
-			height: 100%;
-			background-color: hsl(0, 0%, 10%);
-			border: none;
-			color: white;
-			font-size: clamp(16px, 4vw, 30px);
+	&__tile-button {
+		position: relative;
+		border-radius: 0.5rem;
+		box-shadow: 0 0 10px hsl(0, 0%, 10%);
+		width: 100%;
+		height: 100%;
+		background-color: hsl(0, 0%, 10%);
+		border: none;
+		cursor: pointer;
+		color: white;
+		font-size: clamp(16px, 4vw, 30px);
+
+		// Extracting the tile numbers from the flow as the result of the number
+		// width caused the table to overflow, due to the aspect-ratio on <li>.
+		p {
+			position: absolute;
+			inset: 0;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 	}
 }
